...
      <TouchableOpacity
        testID="searchbar.open"
        activeOpacity={0.9}
        style={styles.collapsedBar}
        onPress={onOpen}
        accessibilityRole="button"
        accessibilityLabel="Search buildings, rooms"
      >
        <View style={styles.leftIconMini}>
          <FontAwesome
            name="search"
            size={16}
            color={MAROON}
...
