...
      longitude: -73.57794498220551,
      latitudeDelta: 0.01,
      longitudeDelta: 0.01,
    },
  },
  LOYOLA: {
    name: 'Loyola Campus',
    coordinate: {
      latitude: 45.4581,
      longitude: -73.6391,
    },
    initialRegion: {
      latitude: 45.4581,
...
