appId: com.commitandpray.soen390project
---
- assertVisible: '.*Loyola.*'
- tapOn: "Select Loyola campus"
- assertVisible: '.*SGW.*'
- tapOn: "Select SGW campus"